<resources>
    <string name="app_name">AppSalaoDeBelezaTeste</string>
    <string name="title_activity_tela_menu">ActivityTelaMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Beauty Full</string>
    <string name="nav_header_subtitle">beauty.full@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Consulta Cliente</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_socios">Socios</string>
    <string name="menu_alteracao">Alteração</string>
</resources>