<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appsalaodebeleza.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.appsalaodebeleza.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.appsalaodebeleza.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_alteracao"
        android:name="com.example.appsalaodebeleza.ui.alteracao.AlteracaoFragment"
        android:label="@string/menu_alteracao"
        tools:layout="@layout/fragment_alteracao" />
    <fragment
        android:id="@+id/nav_socios"
        android:name="com.example.appsalaodebeleza.ui.socios.SociosFragment"
        android:label="@string/menu_socios"
        tools:layout="@layout/fragment_socios" />
</navigation>